Fixed line length and body overflow

--- a/src/css/main/base.less
+++ b/src/css/main/base.less
@@ -7,10 +7,15 @@ body {
     font-size: 1.6rem;
     line-height: 1.4em;
     margin: 0;
+    overflow-x: hidden;
 }
 
 #content, #bodytext {
 	padding: 5rem 0;
+
+    * {
+        max-width: 800px;
+    }
 
 	 h1 {
 		font-weight: bold;
